Tue May  7 10:31:24 2002  Alex Libman <AlexL@rumblegroup.com>

	* tests/TP_Reactor_Test.cpp:
	* tests/TP_Reactor_Test.h: Fixed the tests to work fine on all
	  platforms.  
	
	* tests/run_test.lst (TP_Reactor_Test): Enabled the test for the
	  daily runs. 

Mon May 06 16:31:14 2002  Irfan Pyarali  <irfan@cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor/Abandoned.cpp (handle_timeout): 
	* examples/Reactor/WFMO_Reactor/APC.cpp (handle_signal): 

	  Make sure to remove handlers from the reactor if they are not
	  going to be around when the reactor closes down.

	* examples/Reactor/WFMO_Reactor/Handle_Close.cpp: Reactor creation
	  was buggy and the wrong reactor's event loop was being run.

	* examples/Reactor/WFMO_Reactor/Talker.cpp: STDIN handler was not
	  getting cleaned up properly.  Also, Proactor was not getting
	  removed properly from the Reactor.

	* examples/Reactor/WFMO_Reactor/Network_Events.cpp: Network
	  listener was not getting cleaned up properly.

	* examples/Reactor/WFMO_Reactor/Multithreading.cpp (Task_Handler):
	  Fixed an "out of bounds" error where a "for" loop that was going
	  from 1 to n rather than from 0 to n-1. Also, added a debug
	  statement.

	* examples/Reactor/WFMO_Reactor/run_test.pl: Redirected some of
	  the output from STDERR to STDOUT.

Mon May 06 15:45:35 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ACEXML/parser/debug_validator/Debug_Validator.dsp: Fixed
	  rum-time library options to avoid compilation errors when MFC is
	  enabled.

Mon May  6 14:26:52 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tests/Proactor_Test.cpp: Fixed unused variable warnings in
	  non-win32 builds.

Mon May  6 13:37:45 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/generate_performance_chart.sh: Changed the range of the y
	  range for the plots.

Mon May  6 07:39:22 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Message_Queue_T.cpp (notify): Moved int queue_count definition